SITE-5274 fix scroller visibility

--- a/web/styles/order/map.less
+++ b/web/styles/order/map.less
@@ -19,7 +19,7 @@
             bottom: 0px;
             left: 0px;
             height: 60px;
-            width: 100%;
+            width: 96%;
             .gradient(rgba(255, 255, 255, 0), #fff, rgba(255, 255, 255, 0));
         }
         &:before {
@@ -28,7 +28,7 @@
             top: 0px;
             left: 0px;
             height: 27px;
-            width: 100%;
+            width: 96%;
             .gradient(#fff, rgba(255, 255, 255, 0), #fff);
         }
     }
@@ -221,7 +221,6 @@
         	color: @white;
         	font-size: 14px;
         	text-align: center;
-        	text-indent: 1px;
         	cursor: pointer;
         	.rounded(9px);
         }
@@ -242,7 +241,7 @@
                 bottom: 0px;
                 left: 0px;
                 height: 23px;
-                width: 100%;
+                width: 96%;
                 .gradient(rgba(255, 255, 255, 0), #fff, rgba(255, 255, 255, 0));
             }
             &__list {
